<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_round_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_table"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary"
        android:contentDescription="@string/imagem_tabela_imc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/tabela_imc"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:text="@string/classifica_ao"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp"
                android:text="@string/imc_kg_m"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/abaixo_do_peso" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_18_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/peso_ideal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_18_5_24_9" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/sobrepeso" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_25_0_29_9" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/obesidade_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_30_0_34_9" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/obesidade_2_severa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_35_5_39_9" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/obesidade_3_morbida" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_40" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/imgBtn_voltar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="24dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/voltar_para_a_tela_anterior"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>