<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <View
        android:id="@+id/vw_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_round_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imagem_balan_a_imc"
        android:src="@drawable/ic_weight"
        app:layout_constraintBottom_toTopOf="@+id/txt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_imc"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vw_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vw_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/informe_seus_dados"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vw_title"
        app:startIconDrawable="@drawable/baseline_height_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qual_a_sua_altura"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_altura"
        app:startIconDrawable="@drawable/baseline_scale_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qual_o_seu_peso"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>