<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <View
        android:id="@+id/vw_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_round_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/imagem_balan_a_imc"
        android:src="@drawable/ic_weight"
        app:layout_constraintBottom_toTopOf="@+id/txt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_imc"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vw_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vw_title" />


    <TextView
        android:id="@+id/txt_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/o_seu_indice_de_masssa_corporal"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_title" />

    <TextView
        android:id="@+id/txt_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="?attr/colorPrimary"
        android:textAlignment="center"
        android:textSize="56sp"
        android:textStyle="bold"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bmi" />


    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_results"
        app:layout_constraintTop_toBottomOf="@+id/txt_results" />

    <Button
        android:id="@+id/btn_tabela"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ver_tabela"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:id="@+id/imgBtn_voltar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="24dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/voltar_para_a_tela_anterior"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/txt_dica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating" />


</androidx.constraintlayout.widget.ConstraintLayout>